--- a/Myonen/content/diskussion.tex
+++ b/Myonen/content/diskussion.tex
@@ -1,8 +1,8 @@
 \newpage
 \section{Diskussion}
 \label{sec:Diskussion}
-Zur Auswahl einer geeigneten Verzögerungszeit wurde die Zählrate für verschiedene Verzögerungszeiten gemessen. Basierend auf den vorliegenden Messwerten wurde eine Verzögerungszeit von $T_{Verz}=\SI{-2}{\nano\second}$ gewählt. Der Mittelpunkt des beobachteten Plateuas liegt dabei bei $T_{Verz,berechn}=\SI{-1}{\nano\second}$, was annähernd der für den Versuch gewählten Zeit entspricht. Der Mittelpunkt des Plateaus der zweiten Messung liegt bei $\SI{-5}{\nano\second}$ und ist somit stärker verschoben. In Verbindung mit der für die Pulsbreite unerwartet niedrigen Halbwertsbreite von $t_{hwb,18ns}=\SI{28,59}{\nano\second}$ ist ein möglicher Grund hierfür eine ungenaue Einstellung einer der beiden Pulsbreiten welche für eine zusätzliche Asymmetrie sorgt.
+Zur Auswahl einer geeigneten Verzögerungszeit wurde die Zählrate für verschiedene Verzögerungszeiten gemessen. Basierend auf den vorliegenden Messwerten wurde eine Verzögerungszeit von $T_{\mathrm{Verz}}=\SI{-2}{\nano\second}$ gewählt. Der Mittelpunkt des beobachteten Plateuas liegt dabei bei $T_{\mathrm{Verz,berechn}}=\SI{-1}{\nano\second}$, was annähernd der für den Versuch gewählten Zeit entspricht. Der Mittelpunkt des Plateaus der zweiten Messung liegt bei $\SI{-5}{\nano\second}$ und ist somit stärker verschoben. In Verbindung mit der in Relation zur Pulsbreite ($t_{\mathrm{Puls}}=2\cdot18=\SI{36}{\nano\second}$) niedrigen Halbwertsbreite von $t_{\mathrm{HWB},\SI{18}{\nano\second}}=\SI{29,376}{\nano\second}$  bzw. der hohen Auflösungszeit von $\Delta t_{\SI{18}{\nano\second}}=\SI{6,243}{\nano\second}$ im Vergleich zu der Auflösungszeit $\Delta t_{\SI{10}{\nano\second}}=\SI{0,678}{\nano\second}$ bei einer Pulsbreite von $\SI{10}{\nano\second}$ ist ein möglicher Grund hierfür eine ungenaue Einstellung einer der beiden Pulsbreiten welche für eine zusätzliche Asymmetrie sorgt.
 
 Die Daten für die Kalibrierung des Multichannel-Analyzers zeigen die erwartete lineare Abhängigkeit und ermöglichten eine Bestimmung der Fitparameter mit sehr geringen Unsicherheiten.
 
-Für die Berechnung der Lebensdauer liefern die Messdaten mit dem verwendeten Fit einen Wert von $\tau_{Mess}=\SI{1,674\pm0,23}{\micro\second}$ verglichen mit einem Literaturwert von $\tau_{Literatur}=\SI{2,197\pm0,0000022}{\micro\second}$ (\cite{pdglive}) was einer relativ großen Abweichung von $23,8\%$ entspricht. Allerdings ist die Unsicherheit des berechneten Wertes für die Lebensdauer bereits sehr groß, was hauptsächlich auf die geringe Gesamtanzahl an Events zurückzuführen ist, die zur Verfügung standen. Da sich alle gemessenen Zählraten nur innerhalb ungefähr einer Größenordnung bewegen mit einem Maximalen gemessenen Wert von $15$ Ereignissen in einem channel wird die Messung deutlich erschwert. Außerdem sind derart geringe Zählraten aufgrund ihrer hohen Poisson-Unsicherheit problematisch, wie anhand der Fehlerbalken in Abbildung $\ref{fig:Haupt}$ deutlich erkennbar. Auffällig ist auch, dass von $N_{Start}=3857582$ gemessenen Startevents lediglich $N_{Stop}=738$ Events ein Stopsignal lieferten, was lediglich einer Quote von $0,02\%$ entspricht. In Kombination mit der Tatsache, dass die gemessene Untergrundrate $U_{fit}=0,351\pm0,307$ um eine Größenordnung geringer ist als die aus der Rechnung statistisch erwartete Rate von $U_{rechn}=2,69$ legt dies einen systematischen Fehler nahe, da offensichtlich ein wesentlicher Teil des erwarteten Signals aus der Messung ausgeschlossen wurde. Der wahrscheinlichste Grund hierfür ist ein Fehler in der für die Messung verwendeten Schaltung. Weitere mögliche Gründe für Ungenauigkeiten können zusätzliche Untergrundeffekte sein, da nicht alle Effekte durch die Koinzidenzschaltung kompensiert werden können.
+Für die Berechnung der Lebensdauer liefern die Messdaten mit dem verwendeten Fit einen Wert von $\tau_{\mathrm{Mess}}=\SI{1,674\pm0,23}{\micro\second}$ verglichen mit einem Literaturwert von $\tau_{\mathrm{Literatur}}=\SI{2,197\pm0,0000022}{\micro\second}$ (\cite{pdglive}) was einer relativ großen Abweichung von $23,8\%$ entspricht. Allerdings ist die Unsicherheit des berechneten Wertes für die Lebensdauer bereits sehr groß, was hauptsächlich auf die geringe Gesamtanzahl an Events zurückzuführen ist, die zur Verfügung standen. Da sich alle gemessenen Zählraten nur innerhalb ungefähr einer Größenordnung bewegen mit einem Maximalen gemessenen Wert von $15$ Ereignissen in einem channel wird die Messung deutlich erschwert. Außerdem sind derart geringe Zählraten aufgrund ihrer hohen Poisson-Unsicherheit problematisch, wie anhand der Fehlerbalken in Abbildung $\ref{fig:Haupt}$ deutlich erkennbar. Auffällig ist auch, dass von $N_{\mathrm{Start}}=3857582$ gemessenen Startevents lediglich $N_{\mathrm{Stop}}=738$ Events ein Stopsignal lieferten, was lediglich einer Quote von $0,02\%$ entspricht. In Kombination mit der Tatsache, dass die gemessene Untergrundrate $U_{\mathrm{fit}}=0,351\pm0,307$ um eine Größenordnung geringer ist als die aus der Rechnung statistisch erwartete Rate von $U_{\mathrm{rechn}}=2,69$ legt dies einen systematischen Fehler nahe, da offensichtlich ein wesentlicher Teil des erwarteten Signals aus der Messung ausgeschlossen wurde. Der wahrscheinlichste Grund hierfür ist ein Fehler in der für die Messung verwendeten Schaltung. Weitere mögliche Gründe für Ungenauigkeiten können zusätzliche Untergrundeffekte sein, da nicht alle Effekte durch die Koinzidenzschaltung kompensiert werden können. Die niedrigen Zählraten in den untersten Kanälen könnte beispielsweise von der Verzögerung in der Schaltung oder der gemessenen endlichen Auflösungszeit der Koinzidenz beeinflusst werden, diese Effekte sind allerdings im Nanosekundenbereich und daher sehr gering. Dies könnte zusätzlich auf eine Totzeit im Detektor hindeuten.
