--- a/Diodenlaser/content/theorie.tex
+++ b/Diodenlaser/content/theorie.tex
@@ -1,5 +1,5 @@
 \section{Zielsetzung}
-Mittels eines Lasers kann kohärentes und monochromatisches Licht Erzeugt werden. In diesem Versuch soll die Funktionsweise eines Diodenlasers untersucht sowie mithilfe eines solchen Lasers das Absorptionsspektrum von Rubidium vermessen werden.
+Mittels eines Lasers kann kohärentes und monochromatisches Licht erzeugt werden. In diesem Versuch soll die Funktionsweise eines Diodenlasers untersucht sowie mithilfe eines solchen Lasers das Absorptionsspektrum von Rubidium vermessen werden.
 \section{Theorie}
 \label{sec:Theorie}
 \subsection{Halbleiter}
@@ -13,19 +13,19 @@ In Festkörpern sind aufgrund des Pauli-Verbots die eigentlich diskreten Energie
 Je nach Größe der sogenannten Bandlücke zwischen Valenz- und Leitungsband handelt es sich bei einer großen Bandlücke um einen Isolator und bei einer kleineren Bandlücke um einen Halbleiter. In letzterem Falle können Elektronen durch thermische Anregung die Bandlücke überwinden wodurch das Material leitend wird. Die Bandstruktur in den verschiedenen Fällen ist in Abbildung $\ref{fig:Bandschema}$ illustriert.
 
 Durch eine Dotierung des Halbleiters kann die Leitfähigkeit weiter beeinflusst werden. Bei einer p-Dotierung werden dem Material Elektronen-Akzeptoren hinzugefügt, welche Elektronen aus dem Valenzband aufnehmen und somit für zusätzliche Löcher im Valenzband sorgen. Bei einer n-Dotierung werden dem Material Elektronen-Donatoren hinzugefügt, die zusätzliche Elektronen in das Leitungsband abgeben. Wenn ein p und ein n-dotierter Halbleiter aneinander liegen entsteht and der Grenzfläche ein sogenannter p-n-Übergang. An diesem Übergang entsteht eine Raumladungszone. Wenn an den Übergang eine externe Spannung angelegt wird kann diese Raumladungszone verstärkt werden und wie ein Isolator wirken oder überwunden werden und einen Ladungstransport ermöglichen.
-\subsection{Besetzungsinverrsion und stimulierte Emmission}
+\subsection{Besetzungsinversion und stimulierte Emission}
 Bei dem Übergang eines Elektrons zwischen zwei Energieniveaus wird ein Photon emittiert oder absorbiert dessen Wellenlänge der Energiedifferenz des Übergangs gemäß $E=hf$ mit dem Planckschen Wirkungsquantum $h$ entspricht.
 Dabei kann grundsätzlich zwischen drei unterschiedlichen Prozessen unterschieden werden. Bei der Absorption wird ein Photon vernichtet und regt dabei einen Übergang in ein höheres Energieniveau an. Bei der spontanen Emission geht ein Elektron in einen niedrigeren Energiezustand über und emmitiert dabei ein Photon.
 Ein Photon kann auch an einem Atom einen Übergang und somit die Emission eines weiteren Photons mit identischer Wellenlänge, Phase und Polarisation zum anregenden Photon erzeugen. Durch diesen Prozess der stimulierten Emission wird die Verstärkung in einem Laser gewährleistet indem der Laser durch einen Resonator immer wieder die Emission neuer Photonen stimuliert und somit verstärkt wird. Damit die stimulierte Emission der dominierende Prozess ist und somit ein Verstärkungsprozess stattfindet muss das höherenergetische Energieniveau stärker besetzt sein als das niedrigere Niveau, eine sogenannte Besetzungsinversion, da ansonsten durch Absorption keine Verstärkung stattfinden kann. Um eine Besetzungsinversion gewährleisten zu können muss jedoch ein System mit mindestens drei Zuständen vorliegen, da sich die Zustände ansonsten durch spontane Emission entladen. Bei modernen Lasern werden in aller Regel Systeme mit vier Zuständen verwendet. 
 \subsection{Funktionsweise eines Diodenlasers}
-Im Diodenlaser besteht das Vier-Zustandssystem Aus Valenz und Leitungsband sowie aus dem Niveau der Elektronendonatoren kurz unterhalb des Leitungsbandes und dem Akzeptorniveau kurz oberhalb des Valenzbandes.
+Ein beispiel für ein solches vier-Zustandssystem ist auch der Diodenlaser.
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.5\textwidth]{p-n-Übergang}
 \caption{Photonemission am p-n-Übergang.\cite{Atoms}}
 \label{fig:p-n-Übergang}
 \end{figure}
-Durch Anlegen einer äußeren Spannung am p-n-Übergang fließt ein Strom, wodurch Elektronen aus dem Leitungsband des n-dotierten Teils in den p-dotierten Teil verschoben werden. Umgekehrt werden auch die Löcher aus dem Valenzband des p-dotierten Halbleiters in Richtung des n-dotierten Teils verschoben Diese Elektronen können dann mit den Löchern im Valenzband rekombinieren, weshalb die Energie der induzierten Emission ungefähr der Bandlücke des Materials entspricht. Dieser Prozess ist in Abbildung $\ref{fig:p-n-Übergang}$ dargestellt. Da es sich allerdings um Bänder und nicht um diskrete Energieniveaus handelt ist die Frequenz noch recht breit um das Maximum verteilt.
+Durch Anlegen einer äußeren Spannung am p-n-Übergang fließt ein Strom, wodurch Elektronen aus dem Leitungsband des n-dotierten Teils in den p-dotierten Teil verschoben werden. Umgekehrt werden auch die Löcher aus dem Valenzband des p-dotierten Halbleiters in Richtung des n-dotierten Teils verschoben Diese Elektronen können dann mit den Löchern im Valenzband rekombinieren, weshalb die Energie der induzierten Emission ungefähr der Bandlücke des Materials entspricht. Da es sich allerdings um Bänder und nicht um diskrete Energieniveaus handelt ist die Frequenz noch recht breit um das Maximum verteilt. Dieser Prozess ist in Abbildung $\ref{fig:p-n-Übergang}$ dargestellt. Da die aktive Schicht des p-n-Übergangs von dotierten Schichten mit höherer Bandlücke umgeben ist bestehen die vier Zustände des Systems hier also aus dem Leitungsband der Halbleiterschicht mit höherer Bandlücke und dem Leitungsband des aktiven p-n-Übergangs mit geringerer Bandlücke sowie wiederum dem jeweiligen Valenzband der aktiven Schicht und der umliegenden Halbleiterschicht.
  
 Die äußeren Enden des Halbleiterchips sind reflektierend und fungieren somit als Resonator für den Laser.
 \begin{figure}[h]
@@ -42,9 +42,9 @@ Da sich im Resonator dadurch eine stehende Welle ausbildet können die Moden die
 \centering
 \includegraphics[width=0.8\textwidth]{Diodenlaser Verstärkungsfaktoren}
 \caption{Einfluss der verschiedenen Faktoren wie internem und externem Resonator auf die Gesamtverstärkung.\cite{teachspin}}
-\ref{fig:Verstärkung}
+\label{fig:Verstärkung}
 \end{figure}
-Um die Frequenz des Lasers zusätzlich zu stabilisieren wird ein Littrow-Aufbau wie in Abbildung $\ref{fig:Verstärkung}$ verwendet. Bei diesem wird eine Sammellinse und ein Beugungsgitter verwendet, welches gemäß der Bragg-Bedingung:
+Um die Frequenz des Lasers zusätzlich zu stabilisieren wird ein Littrow-Aufbau wie in Abbildung $\ref{fig:Littrow}$ verwendet. Bei diesem wird eine Sammellinse und ein Beugungsgitter verwendet, welches gemäß der Bragg-Bedingung:
 \begin{equation}
 \lambda=2d\sin(\Theta)
 \end{equation}
