--- a/Myonen/content/auswertung.tex
+++ b/Myonen/content/auswertung.tex
@@ -1,7 +1,7 @@
 \newpage
 \section{Auswertung}
 \label{sec:Auswertung}
-Die gesmate Messdauer der Hauptmessung Betrug $T=\SI{257100}{\second}$. In dieser Zeit wurden $N_{\mathrm{Start}}=3857582$ und $N_{Stop}=738$ Stopsignale gemessen. Dies ergibt eine Eventrate von $f=\frac{N_{\mathrm{Start}}}{T}=\SI{15,004\pm0,008}{\hertz}$
+Die gesmate Messdauer der Hauptmessung Betrug $T=\SI{257100}{\second}$. In dieser Zeit wurden $N_{\mathrm{Start}}=3857582$ und $N_{\mathrm{Stop}}=738$ Stopsignale gemessen. Dies ergibt eine Eventrate von $f=\frac{N_{\mathrm{Start}}}{T}=\SI{15,004\pm0,008}{\hertz}$
 \subsection{Wahl der Verzögerungszeit}
 Die für zwei unterschiedliche Pulsbreiten wurde die Zählrate in Abhängigkeit von der Verzögerungszeit zwischen beiden Komponenten der Koinzidenzschaltung gemessen. Die Messdauer pro Verzögerungszeit Betrug dabei $T_{\mathrm{mess}}=\SI{5}{\second}$. 
 \begin{table}
